[gd_scene load_steps=38 format=2]

[ext_resource path="res://Objects/Units/Senior.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Sprites/Tile/dev_tileset.tres" type="TileSet" id=2]
[ext_resource path="res://assets/Sprites/Tile/NormalTileset.tres" type="TileSet" id=3]
[ext_resource path="res://Scripts/BattleMap.gd" type="Script" id=4]
[ext_resource path="res://Objects/BattleMap Objects/Cursor.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/carmel4a97.RTS_Camera2D/RTS-Camera2D.gd" type="Script" id=6]
[ext_resource path="res://Objects/BattleMap Objects/Grid.tres" type="Resource" id=7]
[ext_resource path="res://Objects/BattleMap Objects/UnitOverlay.tscn" type="PackedScene" id=8]
[ext_resource path="res://Objects/BattleMap Objects/UnitPath.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scripts/GameBoard.gd" type="Script" id=10]
[ext_resource path="res://Objects/BattleMap Objects/PopupMenu.tscn" type="PackedScene" id=11]
[ext_resource path="res://Objects/BattleMap Objects/Player.tscn" type="PackedScene" id=12]
[ext_resource path="res://Objects/BattleMap Objects/TurnQueue.tscn" type="PackedScene" id=13]
[ext_resource path="res://Objects/Commanders/RedLine.tscn" type="PackedScene" id=14]
[ext_resource path="res://Objects/Units/Junior.tscn" type="PackedScene" id=15]
[ext_resource path="res://Dialog/DialogBox.tscn" type="PackedScene" id=16]
[ext_resource path="res://Objects/BattleMap Objects/CombatCursor.tscn" type="PackedScene" id=17]
[ext_resource path="res://Objects/Interface/CommanderUI.tscn" type="PackedScene" id=18]
[ext_resource path="res://assets/Sprites/Property/propertytileset.tres" type="TileSet" id=19]
[ext_resource path="res://assets/Sprites/Property/devproperty.tres" type="TileSet" id=20]
[ext_resource path="res://Scripts/AudioStreamPlayer.gd" type="Script" id=21]
[ext_resource path="res://assets/Sound Effects/interface/bong_001.ogg" type="AudioStream" id=22]
[ext_resource path="res://assets/Sound Effects/units/running.ogg" type="AudioStream" id=23]
[ext_resource path="res://Objects/Interface/PowerActivated.tscn" type="PackedScene" id=24]
[ext_resource path="res://assets/Sound Effects/interface/click_002.ogg" type="AudioStream" id=25]
[ext_resource path="res://Objects/BattleMap Objects/FCTManager.tscn" type="PackedScene" id=26]
[ext_resource path="res://assets/Sound Effects/interface/Select.ogg" type="AudioStream" id=28]
[ext_resource path="res://assets/Sound Effects/gameplay/Heal.ogg" type="AudioStream" id=29]
[ext_resource path="res://Scenes/SoundManager.gd" type="Script" id=30]
[ext_resource path="res://assets/Sound Effects/gameplay/Attack.ogg" type="AudioStream" id=31]
[ext_resource path="res://assets/Sound Effects/gameplay/CaptureProperty.mp3" type="AudioStream" id=32]
[ext_resource path="res://assets/Sound Effects/gameplay/LoseProperty.mp3" type="AudioStream" id=33]
[ext_resource path="res://assets/Sound Effects/gameplay/CaptureIncomplete.ogg" type="AudioStream" id=34]
[ext_resource path="res://assets/Sound Effects/gameplay/Power Ready.mp3" type="AudioStream" id=35]
[ext_resource path="res://assets/Sound Effects/interface/Cancel.ogg" type="AudioStream" id=39]
[ext_resource path="res://Objects/Interface/NewTurnUi.tscn" type="PackedScene" id=40]
[ext_resource path="res://Objects/BattleMap Objects/AIControl.tscn" type="PackedScene" id=41]

[node name="BattleMap" type="Node2D"]
script = ExtResource( 4 )
level_number = 2
victory_hq = false
xMin = 5
xMax = 19
yMin = 2
yMax = 11
gamegrid = ExtResource( 7 )

[node name="Devtiles" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 131077, 1, 0, 131078, 1, 0, 131079, 2, 0, 131080, 5, 0, 131081, 0, 0, 131082, 0, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 2, 0, 131087, 1, 0, 131088, 2, 0, 131089, 1, 0, 131090, 0, 0, 131091, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 5, 0, 196617, 5, 0, 196618, 0, 0, 196619, 1, 0, 196620, 0, 0, 196621, 1, 0, 196622, 0, 0, 196623, 2, 0, 196624, 2, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 5, 0, 262154, 1, 0, 262155, 0, 0, 262156, 1, 0, 262157, 0, 0, 262158, 0, 0, 262159, 2, 0, 262160, 5, 0, 262161, 5, 0, 262162, 5, 0, 262163, 5, 0, 327685, 0, 0, 327686, 0, 0, 327687, 4, 0, 327688, 4, 0, 327689, 4, 0, 327690, 4, 0, 327691, 4, 0, 327692, 4, 0, 327693, 0, 0, 327694, 1, 0, 327695, 5, 0, 327696, 5, 0, 327697, 1, 0, 327698, 0, 0, 327699, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 4, 0, 393224, 0, 0, 393225, 5, 0, 393226, 1, 0, 393227, 0, 0, 393228, 4, 0, 393229, 1, 0, 393230, 0, 0, 393231, 5, 0, 393232, 0, 0, 393233, 1, 0, 393234, 0, 0, 393235, 4, 0, 458757, 4, 0, 458758, 4, 0, 458759, 4, 0, 458760, 0, 0, 458761, 5, 0, 458762, 5, 0, 458763, 1, 0, 458764, 4, 0, 458765, 1, 0, 458766, 3, 0, 458767, 3, 0, 458768, 3, 0, 458769, 0, 0, 458770, 0, 0, 458771, 4, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 5, 0, 524299, 0, 0, 524300, 4, 0, 524301, 4, 0, 524302, 3, 0, 524303, 3, 0, 524304, 3, 0, 524305, 0, 0, 524306, 0, 0, 524307, 4, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 5, 0, 589834, 5, 0, 589835, 1, 0, 589836, 0, 0, 589837, 5, 0, 589838, 3, 0, 589839, 3, 0, 589840, 3, 0, 589841, 1, 0, 589842, 0, 0, 589843, 4, 0, 655365, 2, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 5, 0, 655370, 0, 0, 655371, 0, 0, 655372, 5, 0, 655373, 5, 0, 655374, 3, 0, 655375, 3, 0, 655376, 4, 0, 655377, 4, 0, 655378, 4, 0, 655379, 4, 0, 720901, 2, 0, 720902, 2, 0, 720903, 0, 0, 720904, 0, 0, 720905, 5, 0, 720906, 0, 0, 720907, 0, 0, 720908, 5, 0, 720909, 0, 0, 720910, 1, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0 )

[node name="RenderedTiles" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="RenderedTiles2" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 196618, 2, 0, 262155, 2, 0, 327686, 2, 0, 393224, 2, 0, 393227, 2, 0, 458767, 10, 65540, 524296, 2, 0, 589836, 2, 0, 589837, 10, 1, 589838, 10, 131076, 655370, 2, 0, 655373, 10, 131075, 655374, 9, 131072, 720911, 2, 0 )

[node name="Devproperty" type="TileMap" parent="."]
tile_set = ExtResource( 20 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 458757, 1, 0 )

[node name="PropertyTiles" type="TileMap" parent="."]
visible = false
tile_set = ExtResource( 19 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="GameBoard" type="YSort" parent="."]
script = ExtResource( 10 )
gamegrid = ExtResource( 7 )

[node name="UnitOverlay" parent="GameBoard" instance=ExtResource( 8 )]

[node name="UnitPath" parent="GameBoard" instance=ExtResource( 9 )]

[node name="Units" type="YSort" parent="GameBoard"]

[node name="Junior5" parent="GameBoard/Units" instance=ExtResource( 15 )]
position = Vector2( 265.229, 102.882 )
player_path = NodePath("../../../TurnQueue/Computer1")
cell = Vector2( 16, 6 )

[node name="Junior" parent="GameBoard/Units" instance=ExtResource( 15 )]
position = Vector2( 105.109, 85.6059 )
player_path = NodePath("../../../TurnQueue/Human")
cell = Vector2( 6, 5 )

[node name="Junior2" parent="GameBoard/Units" instance=ExtResource( 15 )]
position = Vector2( 88.7242, 103.354 )
player_path = NodePath("../../../TurnQueue/Human")
cell = Vector2( 5, 6 )

[node name="Junior3" parent="GameBoard/Units" instance=ExtResource( 15 )]
position = Vector2( 87.3084, 137.806 )
player_path = NodePath("../../../TurnQueue/Human")
cell = Vector2( 5, 8 )

[node name="Senior" parent="GameBoard/Units" instance=ExtResource( 1 )]
position = Vector2( 106.186, 150.548 )
player_path = NodePath("../../../TurnQueue/Human")
cell = Vector2( 6, 9 )

[node name="Senior2" parent="GameBoard/Units" instance=ExtResource( 1 )]
position = Vector2( 296.848, 54.2728 )
player_path = NodePath("../../../TurnQueue/Computer1")
cell = Vector2( 18, 3 )

[node name="Senior3" parent="GameBoard/Units" instance=ExtResource( 1 )]
position = Vector2( 296.377, 148.188 )
player_path = NodePath("../../../TurnQueue/Computer1")
cell = Vector2( 18, 9 )

[node name="Junior4" parent="GameBoard/Units" instance=ExtResource( 15 )]
position = Vector2( 264.757, 167.538 )
player_path = NodePath("../../../TurnQueue/Computer1")
cell = Vector2( 16, 10 )

[node name="Junior6" parent="GameBoard/Units" instance=ExtResource( 15 )]
position = Vector2( 103.826, 119.872 )
player_path = NodePath("../../../TurnQueue/Human")
cell = Vector2( 6, 7 )

[node name="Junior7" parent="GameBoard/Units" instance=ExtResource( 15 )]
position = Vector2( 136.39, 117.512 )
player_path = NodePath("../../../TurnQueue/Computer1")
cell = Vector2( 8, 7 )

[node name="Cursor" parent="GameBoard" instance=ExtResource( 5 )]

[node name="SoundMoveCursor" type="AudioStreamPlayer" parent="GameBoard/Cursor"]
stream = ExtResource( 22 )
volume_db = -15.0

[node name="CombatCursor" parent="GameBoard" instance=ExtResource( 17 )]
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="GameBoard"]
layer = 2

[node name="FCTManager" parent="GameBoard/CanvasLayer" instance=ExtResource( 26 )]
visible = false

[node name="SoundManager" type="Node2D" parent="GameBoard"]
visible = false
script = ExtResource( 30 )

[node name="SoundMoveAttackCursor" type="AudioStreamPlayer" parent="GameBoard/SoundManager"]
stream = ExtResource( 25 )
volume_db = -10.0

[node name="SoundInfantryMove" type="AudioStreamPlayer" parent="GameBoard/SoundManager"]
stream = ExtResource( 23 )
volume_db = -10.0

[node name="SoundCancel" type="AudioStreamPlayer" parent="GameBoard/SoundManager"]
stream = ExtResource( 39 )
volume_db = -10.0

[node name="SoundSelect" type="AudioStreamPlayer" parent="GameBoard/SoundManager"]
stream = ExtResource( 28 )
volume_db = -10.0

[node name="SoundHeal" type="AudioStreamPlayer" parent="GameBoard/SoundManager"]
stream = ExtResource( 29 )
volume_db = -10.0

[node name="SoundAttack" type="AudioStreamPlayer" parent="GameBoard/SoundManager"]
stream = ExtResource( 31 )
volume_db = -10.0

[node name="SoundCaptureProperty" type="AudioStreamPlayer" parent="GameBoard/SoundManager"]
stream = ExtResource( 32 )

[node name="SoundLoseProperty" type="AudioStreamPlayer" parent="GameBoard/SoundManager"]
stream = ExtResource( 33 )

[node name="SoundCaptureIncomplete" type="AudioStreamPlayer" parent="GameBoard/SoundManager"]
stream = ExtResource( 34 )

[node name="SoundPowerReady" type="AudioStreamPlayer" parent="GameBoard/SoundManager"]
stream = ExtResource( 35 )
volume_db = -10.0

[node name="RTS-Camera2D" type="Camera2D" parent="."]
position = Vector2( 239.604, 134.819 )
current = true
limit_left = 0
limit_top = 0
limit_right = 480
limit_bottom = 270
smoothing_enabled = true
editor_draw_limits = true
script = ExtResource( 6 )
drag = false
edge = true
wheel = false
camera_margin = 40

[node name="PopupMenu" parent="." instance=ExtResource( 11 )]
margin_left = 18.0
margin_top = 43.0
margin_right = 34.0
margin_bottom = 63.0
popup_exclusive = true
hide_on_item_selection = false

[node name="TurnQueue" parent="." instance=ExtResource( 13 )]
gamegrid = ExtResource( 7 )

[node name="Human" parent="TurnQueue" instance=ExtResource( 12 )]
playerName = "University"
commander_path = NodePath("RedLine")
player_colour = 1

[node name="RedLine" parent="TurnQueue/Human" instance=ExtResource( 14 )]
player_path = NodePath("..")

[node name="Computer1" parent="TurnQueue" instance=ExtResource( 12 )]
position = Vector2( -0.529724, 0 )
playerName = "Banktania"
team = 6
commander_path = NodePath("RedLine")
player_colour = 5
facing = "Left"
computerAI = true

[node name="RedLine" parent="TurnQueue/Computer1" instance=ExtResource( 14 )]
player_path = NodePath("..")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CommanderUI" parent="CanvasLayer" instance=ExtResource( 18 )]

[node name="PowerActivated" parent="CanvasLayer" instance=ExtResource( 24 )]

[node name="DialogBox" parent="CanvasLayer" instance=ExtResource( 16 )]
visible = false
margin_left = -210.261
margin_top = -124.832
margin_right = 220.739
margin_bottom = -9.83203

[node name="NewTurnUi" parent="CanvasLayer" instance=ExtResource( 40 )]
margin_left = -239.123
margin_top = -134.568
margin_right = 240.877
margin_bottom = 135.432

[node name="Music Player" type="AudioStreamPlayer" parent="."]
volume_db = -30.0
script = ExtResource( 21 )

[node name="AIControl" parent="." instance=ExtResource( 41 )]
gamegrid = ExtResource( 7 )

[connection signal="income_changed" from="GameBoard" to="CanvasLayer/CommanderUI" method="income_changed"]
[connection signal="cancel_pressed" from="GameBoard/Cursor" to="GameBoard" method="_on_Cursor_cancel_pressed"]
[connection signal="cancel_released" from="GameBoard/Cursor" to="GameBoard" method="_on_Cursor_cancel_released"]
[connection signal="moved" from="GameBoard/Cursor" to="GameBoard" method="_on_Cursor_moved"]
[connection signal="select_pressed" from="GameBoard/Cursor" to="GameBoard" method="_on_Cursor_select_pressed"]
[connection signal="combat_selection" from="GameBoard/CombatCursor" to="GameBoard" method="_on_CombatCursor_combat_selection"]
[connection signal="moved" from="GameBoard/CombatCursor" to="GameBoard" method="_on_CombatCursor_moved"]
[connection signal="gui_input" from="PopupMenu" to="PopupMenu" method="_on_PopupMenu_gui_input"]
[connection signal="id_pressed" from="PopupMenu" to="PopupMenu" method="_on_PopupMenu_id_pressed"]
[connection signal="popup_hide" from="PopupMenu" to="GameBoard" method="_on_PopupMenu_popup_hide"]
[connection signal="selection" from="PopupMenu" to="GameBoard" method="_on_PopupMenu_selection"]
[connection signal="turn_changed" from="TurnQueue" to="CanvasLayer/CommanderUI" method="_on_TurnQueue_turn_changed"]
[connection signal="funds_changed" from="TurnQueue/Human" to="CanvasLayer/CommanderUI" method="funds_changed"]
[connection signal="power_changed" from="TurnQueue/Human/RedLine" to="CanvasLayer/CommanderUI" method="power_changed"]
[connection signal="funds_changed" from="TurnQueue/Computer1" to="CanvasLayer/CommanderUI" method="funds_changed"]
[connection signal="power_changed" from="TurnQueue/Computer1/RedLine" to="CanvasLayer/CommanderUI" method="power_changed"]
